--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -263,8 +263,23 @@ h1, h2, h3, h4, h5, h6 {
 
 @media (max-width: 768px) {
   #hero h1 {
+    margin-top: 45rem;
     font-size: 28px;
     line-height: 36px;
+  }
+  .hero-container{
+    position: relative;
+    bottom:2px;
+  }
+#hero{
+  width: 100%;
+  height: 100vh!important;
+  background: url("../img/hero\ for\ Phone.jpg") top right!important;
+  background-size: cover;
+  background-repeat: no-repeat;  
+  background-position: 0% 0%;
+  background-size: 100% 100%;
+  z-index: 11;
   }
   #hero h2 {
     font-size: 18px;
