--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -280,11 +280,10 @@ h1, h2, h3, h4, h5, h6 {
 #hero{
   width: 100%;
   height: 100vh!important;
-  background: url("../img/hero\ for\ Phone.jpg") top right!important;
+  background: url("../img/hero-for-Phone.jpg") top right!important;
   background-size: cover;
   background-repeat: no-repeat;  
   background-position: 0% 0%;
-  background-size: 100% 100%;
   z-index: 11;
   }
   #hero h2 {
